tests/sumo/devices/rerouting/assignment/errors/disconnect_via_ignore/errors.sumo.agg
Warning: 1 total messages of type: No connection between edge '%' and edge '%' found.
Warning: 1 total messages of type: No route for vehicle '%' found.
Warning: 2 total messages of type: Teleporting vehicle '%'; waited too long (wrong lane), lane='%', time=%.
Warning: 2 total messages of type: Vehicle '%' ends teleporting on edge '%', time=%.
